# ChimericSequenceMaker

./: .gitignore  .travis.yml  CMakeLists.txt  LICENCE.md  README.md  build.sh
bash/: post-build.sh  pre-build.sh
include/main/: chromosome.h  extract_dealer.h  foo.h  kstring.h  localisation.h  patch.h  patch_dealer.h  sequence.h  test_main.h  utils.h
include/shared/: calc_mean.h
include/static/: calc_sum.h
src/main/: chromosome.cpp  extract_dealer.cpp  foo.cpp  kstring.cpp  localisation.cpp  main.cpp  malloc_wrap.cpp  patch.cpp  patch_dealer.cpp  sequence.cpp  test_main.cpp  utils.cpp
src/shared/: calc_mean.cpp
src/static/: calc_sum.cpp
